k8s/manifests/ingress/ingress-rules.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /gazebo
            pathType: Prefix
            backend:
              service:
                name: gazebo-client
                port:
                  number: 80
          - path: /gazebo/websocket
            pathType: Prefix
            backend:
              service:
                name: gazebo-client
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rviz
                port:
                  number: 80
          - path: /websocket
            pathType: Prefix
            backend:
              service:
                name: rviz
                port:
                  number: 8080
          - path: /files
            pathType: Prefix
            backend:
              service:
                name: rviz
                port:
                  number: 8081
